Added some links in countries description

--- a/_data/fr.yml
+++ b/_data/fr.yml
@@ -7,7 +7,7 @@ summary:
 short_history:
   French history is a rich tapestry of political, cultural, and social evolution. It begins with the ancient Gauls and their conquest by the Romans, who left a lasting legacy in language and law. The Kingdom of France emerged in the 9th century, with significant events like the Hundred Years War and the rise of Joan of Arc shaping French identity.<br>
 
-  The Renaissance saw France become a centralized monarchy under the Bourbons, marked by religious conflicts and the eventual Edict of Nantes. The French Revolution in 1789 ended the monarchy, leading to the Reign of Terror and the rise of Napoleon Bonaparte, who expanded French influence across Europe.<br>
+  The Renaissance saw France become a centralized monarchy under the Bourbons, marked by religious conflicts and the eventual Edict of Nantes. The French Revolution in 1789 ended the monarchy, leading to the Reign of Terror and the rise of <a href="https://en.wikipedia.org/wiki/Napoleon">Napoleon Bonaparte</a>, who expanded French influence across Europe.<br>
 
   Modern France has been shaped by its role in World War II, transitioning from the Fourth to the Fifth Republic under Charles de Gaulle in 1958. Today, France is a major economic and cultural power, deeply involved in European integration. Explore our site to learn more about these pivotal moments and figures that have defined French history.
 
