--- a/_data/pr.yml
+++ b/_data/pr.yml
@@ -1,7 +1,7 @@
 country: Prussia
 
 summary: |
-  Welcome to our site on Prussia's history, a powerful German state centered on the North European Plain. From its origins in 1525 to its key role in German unification, Prussia's militaristic society and influential leaders shaped the course of European history. Explore the rise and fall of this historic kingdom.
+  Welcome to our site on Prussia's history, a powerful German state centered on the North European Plain. From its origins in 1525 to its key role in <a href="https://en.wikipedia.org/wiki/Unification_of_Germany">German unification</a>, Prussia's militaristic society and influential leaders shaped the course of European history. Explore the rise and fall of this historic kingdom.
 
 short_history: |
   Prussia originated from the secularization of the Prussian part of the State of the Teutonic Order in 1525. The union of Brandenburg and Prussia formed Brandenburg-Prussia, consisting of geographically disconnected territories. Under leaders like Frederick William I, Prussia developed a powerful military and an absolute monarchy. In 1701, it became the Kingdom of Prussia, rising to become a major European power. Prussia played a key role in German unification during the 19th century under Otto von Bismarck, but its separate existence ended after World War II when its territory was divided among East Germany, Poland, and the Soviet Union.
