--- a/_data/ru.yml
+++ b/_data/ru.yml
@@ -1,6 +1,6 @@
 country: Russian Empire
 
-summary: Welcome to our site on the history of the Russian Empire, a vast state that spanned northern Eurasia from 1721 to 1917. From its proclamation by Peter the Great to the Russian Revolution, explore its territorial expansion, cultural shifts, and political developments.
+summary: Welcome to our site on the history of the Russian Empire, a vast state that spanned northern Eurasia from 1721 to 1917. From its proclamation by <a href="https://en.wikipedia.org/wiki/Peter_the_Great">Peter the Great</a> to the Russian Revolution, explore its territorial expansion, cultural shifts, and political developments.
 
 short_history: The Russian Empire was proclaimed in November 1721 by Peter the Great, transforming the Tsardom of Russia after the Great Northern War. Peter initiated Western-oriented reforms, moving the capital to Saint Petersburg and modernizing the state. The empire expanded under rulers like Catherine the Great and Alexander I, becoming a major European power. Despite reforms, it faced internal tensions, leading to the 1905 Revolution and the establishment of the State Duma. Involvement in World War I led to the February Revolution in 1917, the abdication of Nicholas II, and ultimately the rise of the Bolsheviks.
 
